--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha Página de Links</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="iconbelgas.ico" type="image/x-icon"></linkrel>
 </head>
 <body>
 
@@ -14,7 +15,7 @@
         <h1> Olá, seja bem vindo 😁</h1> 
         <h2>Aqui iremos te apresentar nossos atendentes e todas as nossas redes sociais!</h2>
         <br>
-        <a href="https://www.mkimenso.com">Nosso site</a>
+        <a href="https://belgashookah.lojavirtualnuvem.com.br">Nosso site</a>
         <br>
         <a href="https://wa.me/5511917676389?text=Ol%C3%A1%20gostaria%2C%20de%20fazer%20um%20pedido!%20Cansei%20de%20pagar%20caro%20nas%20minhas%20frutinhas%20geladas!">Atendente Mesquita</a>
         <a href="https://wa.me/5511957930623<strong></strong>?text=Ol%C3%A1%20gostaria%2C%20de%20fazer%20um%20pedido!%20Cansei%20de%20pagar%20caro%20nas%20minhas%20frutinhas%20geladas!">Atendente Kaique </a>
