--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div id="links-container">
         <h1> Olá, seja bem vindo 😁</h1> 
         <h2>Aqui iremos te apresentar nossos atendentes e todas as nossas redes sociais!</h2>
-        <!-- <br>
-        <a href="https://belgashookah.lojavirtualnuvem.com.br">Nosso site</a> -->
+        <br>
+        <a href="https://www.belgashookah.shop">Nosso site</a>
         <br>
         <a href="https://wa.me/5511917676389?text=Ol%C3%A1%20gostaria%2C%20de%20fazer%20um%20pedido!%20Cansei%20de%20pagar%20caro%20nas%20minhas%20frutinhas%20geladas!">Atendente Mesquita</a>
         <a href="https://wa.me/5511957930623?text=Ol%C3%A1%20gostaria%2C%20de%20fazer%20um%20pedido!%20Cansei%20de%20pagar%20caro%20nas%20minhas%20frutinhas%20geladas!"">Atendente Kaique </a>
