--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <br>
         <a href="https://wa.me/5511957930623?text=Ol%C3%A1%20gostaria%2C%20de%20fazer%20um%20pedido!%20Cansei%20de%20pagar%20caro%20nas%20minhas%20frutinhas%20geladas!"">Atendente Kaique </a>
         <br>
-        <a href="https://www.tiktok.com/@belgashookah__?_t=8jt10CxFSYY&_r=1">Tiktok</a>
+        <a href="https://www.tiktok.com/@techmarketbrasil">Tiktok</a>
         <a href="https://www.instagram.com/belgashookah_reserva?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram Reserva</a>
         <a href="https://chat.whatsapp.com/FREdR1aQ3BX1AvIlsNxIW4">Grupo de clientes</a>
     </div>
