--- a/index.html
+++ b/index.html
@@ -13,20 +13,35 @@
 
     <div id="links-container">
         <h1> Olá, seja bem vindo 😁</h1> 
-        <h2>Aqui iremos te apresentar nossos atendentes e todas as nossas redes sociais!</h2>
+        <h2>Aqui iremos te apresentar nossos produtos e todas as nossas redes sociais!</h2>
+        <h2>Basta clicar em cima de algum botão que você sera redirecionado</h2>
         <br>
-        <a href="https://techmarketbrasil.com/">Nosso site</a>
+        <a href="https://techmarketbrasil.com/">Onde comprar</a>
         <br>
-        <a href="https://wa.me/5511958770372?text=Ol%C3%A1%20gostaria%2C%20de%20fazer%20um%20pedido!%20Cansei%20de%20pagar%20caro%20nas%20minhas%20frutinhas%20geladas!"">Atendente Kaique </a>
+        <h2>Nossos produtos</h2>
         <br>
+        <a href="https://techmarketbrasil.com/produto/oxbar-magic-maze-2-30000-puffs/">Oxbar Magic Maze 2 – 30000 Puffs</a>
+        <a href="https://techmarketbrasil.com/produto/oxbar-g8000-8000-puffs/">OXBAR – G8000 – 8000 Puffs</a>
+        <a href="https://techmarketbrasil.com/produto/elf-bar-lost-mary-mt15000-turbo/">Lost Mary MT15000 Turbo – 15000 Puffs</a>
+        <a href="https://techmarketbrasil.com/produto/lost-mary-mo20000/">Lost Mary MO20000 PRO – 20000 Puffs</a>
+        <a href="https://techmarketbrasil.com/produto/lost-mary-mo10000-10000-puffs-600mah/">Lost Mary MO10000 – 10000 Puffs</a>
+        <a href="https://techmarketbrasil.com/produto/ignite-v80/">IGNITE V80 – 8000 Puffs</a>
+        <a href="https://techmarketbrasil.com/produto/ignite-v150/">IGNITE V150 – 15000 Puffs</a>
+        <br>
+        <h2>Categorias</h2>
+        <br>
+        <a href="https://techmarketbrasil.com/categoria-produto/pod-descartavel/">Pods Descartáveis</a>
+        <a href="https://techmarketbrasil.com/categoria-produto/e-liquidos/">E-líquidos</a>
+        <a href="https://techmarketbrasil.com/categoria-produto/pod-system/">Pod System e Vapers</a>
+        <br>
+        <h2>Nossas redes sociais</h2>
+        <br>
+        <a href="https://wa.me/5511917676389?text=Ol%C3%A1%2C%20Gostaria%20de%20uma%20ajuda%21">WhatsApp</a>
         <a href="https://www.tiktok.com/@techmarketbrasil">Tiktok</a>
-        <a href="https://www.instagram.com/belgashookah_reserva?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram Reserva</a>
         <a href="https://chat.whatsapp.com/FREdR1aQ3BX1AvIlsNxIW4">Grupo de clientes</a>
     </div>
 <br>
 <br>
 <br>
-
-    <footer>Copyright Belgashookah ©2024 Todos direitos reservados</footer>
 </body>
 </html>
