--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <img src="logo belgas.png" alt="Logo Belgashookah">
+    <img src="logo belgas.png" alt="Logo Tech Market Brasil">
 
     <div id="links-container">
         <h1> Olá, seja bem vindo 😁</h1> 
