--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LinkTree</title>
+    <title>Tech Market Brasil | A inovação no mundo de Vaping</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="iconbelgas.ico" type="image/x-icon"></linkrel>
 </head>
 <body>
 
-    <img src="logo belgas.png" alt="Logo Tech Market Brasil">
+    <img src="./assets/Dougzão-da-massa.png" alt="Logo Tech Market Brasil">
 
     <div id="links-container">
         <h1> Olá, seja bem vindo 😁</h1> 
@@ -38,7 +38,6 @@
         <br>
         <a href="https://wa.me/5511917676389?text=Ol%C3%A1%2C%20Gostaria%20de%20uma%20ajuda%21">WhatsApp</a>
         <a href="https://www.tiktok.com/@techmarketbrasil">Tiktok</a>
-        <a href="https://chat.whatsapp.com/FREdR1aQ3BX1AvIlsNxIW4">Grupo de clientes</a>
     </div>
 <br>
 <br>
