--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h2>Nossos produtos</h2>
         <br>
         <a href="https://techmarketbrasil.com/produto/oxbar-magic-maze-2-30000-puffs/">Oxbar Magic Maze 2 | 30000 Puffs</a>
-        <a href="https://techmarketbrasil.com/produto/oxbar-g8000-8000-puffs/">OXBAR G8000 | 8000 Puffs</a>
+        <a>OXBAR G8000 | 8000 Puffs</a>
         <a href="https://techmarketbrasil.com/produto/elf-bar-lost-mary-mt15000-turbo/">Lost Mary MT15000 Turbo | 15000 Puffs</a>
         <a href="https://techmarketbrasil.com/produto/lost-mary-mo20000/">Lost Mary MO20000 PRO | 20000 Puffs</a>
         <a href="https://techmarketbrasil.com/produto/lost-mary-mo10000-10000-puffs-600mah/">Lost Mary MO10000 | 10000 Puffs</a>
