--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
         <br>
         <h2>Nossos produtos</h2>
         <br>
-        <a href="https://techmarketbrasil.com/produto/oxbar-magic-maze-2-30000-puffs/">Oxbar Magic Maze 2 | 30000 Puffs</a>
+        <a href="">Oxbar Magic Maze 2 | 30000 Puffs</a>
         <a>OXBAR G8000 | 8000 Puffs</a>
-        <a href="https://techmarketbrasil.com/produto/elf-bar-lost-mary-mt15000-turbo/">Lost Mary MT15000 Turbo | 15000 Puffs</a>
-        <a href="https://techmarketbrasil.com/produto/lost-mary-mo20000/">Lost Mary MO20000 PRO | 20000 Puffs</a>
-        <a href="https://techmarketbrasil.com/produto/lost-mary-mo10000-10000-puffs-600mah/">Lost Mary MO10000 | 10000 Puffs</a>
-        <a href="https://techmarketbrasil.com/produto/ignite-v80/">IGNITE V80 | 8000 Puffs</a>
-        <a href="https://techmarketbrasil.com/produto/ignite-v150/">IGNITE V150 | 15000 Puffs</a>
+        <a href="">Lost Mary MT15000 Turbo | 15000 Puffs</a>
+        <a href="">Lost Mary MO20000 PRO | 20000 Puffs</a>
+        <a href="">Lost Mary MO10000 | 10000 Puffs</a>
+        <a href="">IGNITE V80 | 8000 Puffs</a>
+        <a href="">IGNITE V150 | 15000 Puffs</a>
         <br>
         <h2>Categorias</h2>
         <br>
-        <a href="https://techmarketbrasil.com/categoria-produto/pod-descartavel/">Pods Descartáveis</a>
-        <a href="https://techmarketbrasil.com/categoria-produto/e-liquidos/">E-líquidos</a>
-        <a href="https://techmarketbrasil.com/categoria-produto/pod-system/">Pod System e Vapers</a>
+        <a href="">Pods Descartáveis</a>
+        <a href="">E-líquidos</a>
+        <a href="">Pod System e Vapers</a>
         <br>
         <h2>Nossas redes sociais</h2>
         <br>
